Fix footer not showing on mobile

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,6 +3,7 @@
 
 .footer {
   @include header-footer;
+  bottom: 0;
 
   @include desktop {
     display: none;
